--- a/config/zones/CR.yaml
+++ b/config/zones/CR.yaml
@@ -280,3 +280,13 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+isRenewable:
+  unknown:
+    _comment: Source https://www.grupoice.com/wps/wcm/connect/579dfc1f-5156-41e0-807d-d6808f65d718/Fasciculo_Electricidad_2020_ingl%C3%A9s_compressed.pdf?MOD=AJPERES&CVID=m.pGzcp
+    source: assumes 58% thermal (coal, gas, or oil), 42% solar and biomass
+    value: 0.42
+isLowCarbon:
+  unknown:
+    _comment: Source https://www.grupoice.com/wps/wcm/connect/579dfc1f-5156-41e0-807d-d6808f65d718/Fasciculo_Electricidad_2020_ingl%C3%A9s_compressed.pdf?MOD=AJPERES&CVID=m.pGzcp
+    source: assumes 58% thermal (coal, gas, or oil), 42% solar and biomass
+    value: 0.42
