--- a/config/zones/HN.yaml
+++ b/config/zones/HN.yaml
@@ -224,3 +224,13 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+isRenewable:
+  unknown:
+    _url: https://www.iea.org/fuels-and-technologies/electricity
+    source: IEA 2019; assumes 47.4% oil, 23.1% hydro, 10.6% solar, 8.3% biomass, 7.8% wind, 2.8% geothermal
+    value: 0.526
+isLowCarbon:
+  unknown:
+    _url: https://www.iea.org/fuels-and-technologies/electricity
+    source: IEA 2019; assumes 47.4% oil, 23.1% hydro, 10.6% solar, 8.3% biomass, 7.8% wind, 2.8% geothermal
+    value: 0.526
