--- a/config/zones/IN-NO.yaml
+++ b/config/zones/IN-NO.yaml
@@ -188,3 +188,11 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+isRenewable:
+  unknown:
+    source: CEA 2022; assumes 56% biomass, 36% hydro, 8% unknown
+    value: 0.92
+isLowCarbon:
+  unknown:
+    source: CEA 2022; assumes 56% biomass, 36% hydro, 8% unknown
+    value: 0.92
