--- a/config/zones/KR.yaml
+++ b/config/zones/KR.yaml
@@ -406,3 +406,15 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
 timezone: Asia/Seoul
 zone_name: South Korea
+isRenewable:
+  unknown:
+    _comment: 'Source: 2020 annual electricity production by IEA'
+    _url: https://www.iea.org/fuels-and-technologies/electricity
+    source: IEA 2020; assumes 54.1% coal, 36.1% gas, 1.5% oil, 4.4% solar, 0.8% wind, 2.2% biofuels, 1.0% other
+    value: 0.084
+isLowCarbon:
+  unknown:
+    _comment: 'Source: 2020 annual electricity production by IEA'
+    _url: https://www.iea.org/fuels-and-technologies/electricity
+    source: IEA 2020; assumes 54.1% coal, 36.1% gas, 1.5% oil, 4.4% solar, 0.8% wind, 2.2% biofuels, 1.0% other
+    value: 0.084
