--- a/config/zones/KW.yaml
+++ b/config/zones/KW.yaml
@@ -137,3 +137,11 @@ sources:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+isRenewable:
+  unknown:
+    source: IEA 2019; assumes 62.3% gas, 37.7% oil
+    value: 0
+isLowCarbon:
+  unknown:
+    source: IEA 2019; assumes 62.3% gas, 37.7% oil
+    value: 0
