fix: RU zones unknown factor and isRenewalve and isLowCarbon

--- a/config/zones/RU-EU.yaml
+++ b/config/zones/RU-EU.yaml
@@ -26,3 +26,9 @@ sources:
     link: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
 timezone: Europe/Moscow
 zone_name: Arctic
+isLowCarbon:
+  unknown:
+    value: 0
+isRenewable:
+  unknown:
+    value: 0
