--- a/config/zones/RU-KGD.yaml
+++ b/config/zones/RU-KGD.yaml
@@ -34,3 +34,9 @@ sources:
     link: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
 timezone: Europe/Kaliningrad
 zone_name: Kaliningrad
+isLowCarbon:
+  unknown:
+    value: 0
+isRenewable:
+  unknown:
+    value: 0
