--- a/config/zones/RU-FE.yaml
+++ b/config/zones/RU-FE.yaml
@@ -26,3 +26,9 @@ sources:
     link: https://www.iea.org/statistics/statisticssearch/report/?country=Russia&product=electricityandheat
 timezone: Asia/Kamchatka
 zone_name: Far East
+isLowCarbon:
+  unknown:
+    value: 0
+isRenewable:
+  unknown:
+    value: 0
