--- a/config/zones/SV.yaml
+++ b/config/zones/SV.yaml
@@ -232,3 +232,17 @@ sources:
     link: https://ourworldindata.org/grapher/electricity-prod-source-stacked?country=~SLV
 timezone: America/El_Salvador
 zone_name: El Salvador
+isLowCarbon:
+  unknown:
+    - _comment: Based on on 2022 generation from Our World in Data and IPCC 2014 emission factors
+      _url: https://github.com/electricitymaps/electricitymaps-contrib/pull/6412#issuecomment-1915621810
+      datetime: '2022-01-01'
+      source: Our World in Data 2022; IPCC 2014; assumes 51% gas, 49% oil
+      value: 0
+isRenewable:
+  unknown:
+    - _comment: Based on on 2022 generation from Our World in Data and IPCC 2014 emission factors
+      _url: https://github.com/electricitymaps/electricitymaps-contrib/pull/6412#issuecomment-1915621810
+      datetime: '2022-01-01'
+      source: Our World in Data 2022; IPCC 2014; assumes 51% gas, 49% oil
+      value: 0
