--- a/config/retired_zones/IN-KA.yaml
+++ b/config/retired_zones/IN-KA.yaml
@@ -41,6 +41,10 @@ emissionFactors:
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
         value: 0.0
+    unknown:
+      _comment: assumes 20% nuclear (0), 80% coal (760)
+      source: Souther Regional Load Dispatch Center Allocation Limits 2018-2019; SRLDC 2018-2019 derived calculation for Karnataka
+      value: 608.0
   lifecycle:
     hydro discharge:
       - _comment: used default IPCC 2014 value of 24.0
@@ -64,7 +68,7 @@ emissionFactors:
         source: Electricity Maps, 2025 zone average; IPCC 2014
         value: 24.0
     unknown:
-      _comment: calculated 20% nuclear, 80% thermal (coal)
+      _comment: assumes 20% nuclear (12), 80% coal (820)
       source: Souther Regional Load Dispatch Center Allocation Limits 2018-2019; SRLDC 2018-2019 derived calculation for Karnataka
       value: 658.4
 fallbackZoneMixes:
@@ -189,3 +193,13 @@ sources:
     link: http://srldc.org/2018-19srallocation.aspx
 timezone: Asia/Kolkata
 zone_name: Unknown
+isRenewable:
+  unknown:
+    _comment: assumes 20% nuclear (12), 80% coal (820)
+    source: Souther Regional Load Dispatch Center Allocation Limits 2018-2019; SRLDC 2018-2019 derived calculation for Karnataka
+    value: 0
+isLowCarbon:
+  unknown:
+    _comment: assumes 20% nuclear (12), 80% coal (820)
+    source: Souther Regional Load Dispatch Center Allocation Limits 2018-2019; SRLDC 2018-2019 derived calculation for Karnataka
+    value: 0.2
