--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -40,6 +40,18 @@ jobs:
   #                        #
   # Repository wide checks #
   #                        #
+  prettier:
+    name: Prettier
+    runs-on: ubuntu-24.04-arm
+    timeout-minutes: 5
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+      - name: Setup Node
+        uses: actions/setup-node@v6
+      - name: Prettier Check
+        run: |
+          npx -y prettier@2 --check .
 
   earthly:
     name: earthly
