--- a/config/zones/US-FLA-HST.yaml
+++ b/config/zones/US-FLA-HST.yaml
@@ -3,6 +3,7 @@ bounding_box:
     - 24.6374500000001
   - - -79.61802
     - 26.47902
+can_have_zero_production: true
 capacity:
   battery storage:
     - datetime: '2017-01-01'
