--- a/config/zones/US-NW-GRID.yaml
+++ b/config/zones/US-NW-GRID.yaml
@@ -3,6 +3,7 @@ bounding_box:
     - 44.7463779450001
   - - -118.363136292
     - 46.366308212
+can_have_zero_production: true
 capacity:
   battery storage:
     - datetime: '2021-01-01'
