--- a/config/zones/US-FLA-FPC.yaml
+++ b/config/zones/US-FLA-FPC.yaml
@@ -23,6 +23,9 @@ capacity:
     - datetime: '2023-11-01'
       source: EIA.gov
       value: 50.1
+    - datetime: '2025-11-01'
+      source: EIA.gov
+      value: 55.1
   biomass:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -118,6 +121,9 @@ capacity:
     - datetime: '2020-10-01'
       source: EIA.gov
       value: 1329.7
+    - datetime: '2025-11-01'
+      source: EIA.gov
+      value: 1330.7
   solar:
     - datetime: '2017-01-01'
       source: EIA.gov
@@ -191,10 +197,16 @@ capacity:
     - datetime: '2025-07-01'
       source: EIA.gov
       value: 2011.8
+    - datetime: '2025-11-01'
+      source: EIA.gov
+      value: 2236.1
   unknown:
     - datetime: '2017-01-01'
       source: EIA.gov
       value: 150
+    - datetime: '2025-11-01'
+      source: EIA.gov
+      value: 18.8
   wind:
     - datetime: '2017-01-01'
       source: EIA.gov
